# plc_algo1

./: CMakeLists.txt  gui.py  setup.py
algo/: CMakeLists.txt  ZD_heurist_QAP.cpp  ZD_heurist_QAP.h  ZD_heurist_QAP1.cpp  ZD_heurist_QAP1.h  bb.h  dp.cpp  dp.h  goto.cpp  goto.h  new_goto.cpp  new_goto.h  new_heurist_QAP.cpp  new_heurist_QAP.h  test_dp.cpp  test_goto.cpp  test_new_goto.cpp  test_new_heurist.cpp  test_zd_heurist_2.cpp  zd_heurist.cpp  zd_heurist_2.cpp  zd_heurist_2.h
algo/algo1/: ZD_heurist_QAP1.cpp  ZD_heurist_QAP1.h
src/: IdleTaskSolver.cpp  IdleTaskSolver.h  LayoutGenerator.cpp  LayoutGenerator.h  TaskSolver.cpp  TaskSolver.h  bfTaskSolver.cpp  bfTaskSolver.h  defs.h  dpTaskSolver.cpp  dpTaskSolver.h  gotoSolver.cpp  gotoSolver.h  impl.cpp  module.cpp  newGotoSolver.cpp  newGotoSolver.h  newTaskSolver.cpp  newTaskSolver.h  test_impl.cpp  zdTaskSolver.cpp  zdTaskSolver.h
